fixing section and mobile responsiv

--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -230,32 +230,56 @@
             If need website you can contact me.
           </span>
 
-          <div
-            class="socialmeida container d-flex justify-content-center align-items-center gap-5"
-          >
-            <a
-              href="https://www.facebook.com/momcilo.nikolic.796"
-              target="_blank"
-            >
-              <i class="fa-brands fa-facebook mediaIcon"></i>
-            </a>
-            <a
-              href="https://www.instagram.com/moco.nikolic/?hl=hr"
-              target="_blank"
-            >
-              <i class="fa-brands fa-square-instagram mediaIcon"></i>
-            </a>
-            <a
-              href="https://www.linkedin.com/in/mom%C4%8Dilo-nikoli%C4%87-7828b4244/?originalSubdomain=hr"
-              target="_blank"
-            >
-              <i class="fa-brands fa-linkedin mediaIcon"></i>
-            </a>
-            <a href="https://github.com/Moco23" target="_blank">
-              <i class="fa-brands fa-github mediaIcon"></i>
-            </a>
-            <i class="fa-brands fa-square-whatsapp mediaIcon"></i>
-            <i class="fa-solid fa-envelope mediaIcon"></i>
+          <div class="socialmeida container">
+            <div class="row row-gap-5">
+              <div
+                class="col-4 d-flex justify-content-center align-items-center"
+              >
+                <a
+                  href="https://www.facebook.com/momcilo.nikolic.796"
+                  target="_blank"
+                >
+                  <i class="fa-brands fa-facebook mediaIcon"></i>
+                </a>
+              </div>
+              <div
+                class="col-4 d-flex justify-content-center align-items-center"
+              >
+                <a
+                  href="https://www.instagram.com/moco.nikolic/?hl=hr"
+                  target="_blank"
+                >
+                  <i class="fa-brands fa-square-instagram mediaIcon"></i>
+                </a>
+              </div>
+              <div
+                class="col-4 d-flex justify-content-center align-items-center"
+              >
+                <a
+                  href="https://www.linkedin.com/in/mom%C4%8Dilo-nikoli%C4%87-7828b4244/?originalSubdomain=hr"
+                  target="_blank"
+                >
+                  <i class="fa-brands fa-linkedin mediaIcon"></i>
+                </a>
+              </div>
+              <div
+                class="col-4 d-flex justify-content-center align-items-center"
+              >
+                <a href="https://github.com/Moco23" target="_blank">
+                  <i class="fa-brands fa-github mediaIcon"></i>
+                </a>
+              </div>
+              <div
+                class="col-4 d-flex justify-content-center align-items-center"
+              >
+                <i class="fa-brands fa-square-whatsapp mediaIcon"></i>
+              </div>
+              <div
+                class="col-4 d-flex justify-content-center align-items-center"
+              >
+                <i class="fa-solid fa-envelope mediaIcon"></i>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -329,7 +353,7 @@
       <section class="technologiSection">
         <div class="container">
           <h2 class="secondaryHeading text-center text-uppercase mb-5">
-            Technologi
+            technology
           </h2>
           <div class="row mb-5">
             <div
@@ -447,7 +471,7 @@
                   id="baisic"
                   class="secondaryHeading text-center mb-5 text-uppercase"
                 >
-                  Baisic
+                  basics
                 </h2>
 
                 <h2 class="text-center text-warning mb-5">
@@ -574,47 +598,49 @@
     </main>
 
     <!-- footer -->
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <footer class="mainBg_color p-5 d-flex justify-content-evenly footer">
-            <h4 class="mainText_color w-100">
+    <footer class="mainBg_color p-5">
+      <div class="container">
+        <div class="row footer">
+          <div class="col-12">
+            <h4 class="mainText_color text-center mb-3">
               Copyright &copy;2023. All rights reserved by Momcilo Nikolic
             </h4>
-
-            <div
-              class="socialmeida container d-flex justify-content-center align-items-center gap-5"
-              id="contactMe"
+          </div>
+          <div
+            class="col-12 d-flex justify-content-center align-items-center gap-5"
+            id="contactMe"
+          >
+            <a
+              href="https://www.facebook.com/momcilo.nikolic.796/"
+              target="_blank"
             >
-              <h4 class="mainText_color">Find me here &rarr;</h4>
-              <a
-                href="https://www.facebook.com/momcilo.nikolic.796/"
-                target="_blank"
-              >
-                <i class="fa-brands fa-facebook mediaIconFooter"></i>
-              </a>
-              <a
-                href="https://www.instagram.com/moco.nikolic/?hl=hr"
-                target="_blank"
-              >
-                <i class="fa-brands fa-square-instagram mediaIconFooter"></i>
-              </a>
-              <a
-                href="https://www.linkedin.com/in/mom%C4%8Dilo-nikoli%C4%87-7828b4244/"
-                target="_blank"
-              >
-                <i class="fa-brands fa-linkedin mediaIconFooter"></i>
-              </a>
-              <a href="https://github.com/Moco23" target="_blank">
-                <i class="fa-brands fa-github mediaIconFooter"></i>
-              </a>
-              <i class="fa-brands fa-square-whatsapp mediaIconFooter"></i>
-              <i class="fa-solid fa-envelope mediaIconFooter"></i>
-            </div>
-          </footer>
+              <i class="fa-brands fa-facebook mediaIconFooter"></i>
+            </a>
+
+            <a
+              href="https://www.instagram.com/moco.nikolic/?hl=hr"
+              target="_blank"
+            >
+              <i class="fa-brands fa-square-instagram mediaIconFooter"></i>
+            </a>
+
+            <a
+              href="https://www.linkedin.com/in/mom%C4%8Dilo-nikoli%C4%87-7828b4244/"
+              target="_blank"
+            >
+              <i class="fa-brands fa-linkedin mediaIconFooter"></i>
+            </a>
+
+            <a href="https://github.com/Moco23" target="_blank">
+              <i class="fa-brands fa-github mediaIconFooter"></i>
+            </a>
+
+            <i class="fa-brands fa-square-whatsapp mediaIconFooter"></i>
+            <i class="fa-solid fa-envelope mediaIconFooter"></i>
+          </div>
         </div>
       </div>
-    </div>
+    </footer>
     <!-- footer -->
 
     <!-- bs scripts -->
