--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -233,7 +233,7 @@
           <div class="socialmeida container">
             <div class="row row-gap-5">
               <div
-                class="col-4 d-flex justify-content-center align-items-center"
+                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
               >
                 <a
                   href="https://www.facebook.com/momcilo.nikolic.796"
@@ -243,7 +243,7 @@
                 </a>
               </div>
               <div
-                class="col-4 d-flex justify-content-center align-items-center"
+                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
               >
                 <a
                   href="https://www.instagram.com/moco.nikolic/?hl=hr"
@@ -253,7 +253,7 @@
                 </a>
               </div>
               <div
-                class="col-4 d-flex justify-content-center align-items-center"
+                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
               >
                 <a
                   href="https://www.linkedin.com/in/mom%C4%8Dilo-nikoli%C4%87-7828b4244/?originalSubdomain=hr"
@@ -263,19 +263,19 @@
                 </a>
               </div>
               <div
-                class="col-4 d-flex justify-content-center align-items-center"
+                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
               >
                 <a href="https://github.com/Moco23" target="_blank">
                   <i class="fa-brands fa-github mediaIcon"></i>
                 </a>
               </div>
               <div
-                class="col-4 d-flex justify-content-center align-items-center"
+                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
               >
                 <i class="fa-brands fa-square-whatsapp mediaIcon"></i>
               </div>
               <div
-                class="col-4 d-flex justify-content-center align-items-center"
+                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
               >
                 <i class="fa-solid fa-envelope mediaIcon"></i>
               </div>
