--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -34,8 +34,9 @@
     <!-- header -->
     <header class="header">
       <nav class="navbar navbar-expand-lg bg-dark p-3">
-        <div class="container d-flex">
-          <div class="rightSide">
+        <div class="container d-flex justify-content-between">
+          <!-- <div class="rightSide"> -->
+          <div class="col-md-6">
             <a class="navbar-brand mainLogo" href="#"
               >Frontend <span>developer</span></a
             >
@@ -51,9 +52,11 @@
               <span class="navbar-toggler-icon"></span>
             </button>
           </div>
+          <!-- </div> -->
 
-          <div class="rightSide2">
-            <div class="collapse navbar-collapse w-100" id="navbarNavDropdown">
+          <!-- <div class="rightSide2"> -->
+          <div class="col-md-6">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a
@@ -64,7 +67,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mainNav_list" href="#">About me</a>
+                  <a class="nav-link mainNav_list" href="a">About me</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link mainNav_list" href="#myProjectSection"
@@ -102,6 +105,7 @@
               </ul>
             </div>
           </div>
+          <!-- </div> -->
         </div>
       </nav>
     </header>
@@ -112,7 +116,7 @@
       <section class="heroSection d-grid align-items-center">
         <div class="container">
           <div class="row">
-            <div class="col-12 col-md-12 col-lg-6">
+            <div class="col-lg-6 col-md-12 col-12">
               <h1 class="mainHeading text-center p-5">Momcilo Nikolic</h1>
               <h2
                 class="developerDescrption mainText_color text-center text-md-end p-md-5 p-5"
@@ -142,7 +146,7 @@
                 >
               </div>
             </div>
-            <div class="col-12 col-md-12 col-lg-6 p-5">
+            <div class="col-lg-6 col-md-12 col-12 p-5">
               <div
                 class="profileImg_box d-flex justify-content-center align-items-center"
               >
@@ -160,47 +164,94 @@
 
       <!-- my projects section -->
       <section class="myProjects" id="myProjectSection">
-        <div class="container">
+        <div class="container p-5">
           <div class="row">
-            <h2 class="text-center secondaryHeading mb-5">My Projects</h2>
+            <h2 class="text-center secondaryHeading myProjectsSection_heading">
+              My Projects
+            </h2>
           </div>
 
           <!-- slider -->
-          <div id="carouselExample" class="carousel slide mb-5">
+          <div id="carouselExampleFade" class="carousel slide carousel-fade">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img
-                  src="css/imgs/project_1.jpeg"
-                  class="d-block w-100"
-                  alt="pto burawerda on the site"
-                />
+                <div class="row row-gap-5 sliderResponsive">
+                  <div class="col-lg-6 col-md-12 col-12">
+                    <img
+                      src="css/imgs/project_1.jpeg"
+                      class="d-block w-100 h-100 slider_img"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-lg-6 col-md-12 col-12">
+                    <h2 class="secondaryHeading mb-5 text-center">
+                      about project
+                    </h2>
+                    <h2
+                      class="mainText_color text-lg-start text-md-center text-center"
+                    >
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Ab, excepturi. Fugit reprehenderit ad doloremque corrupti.
+                      Odit esse animi, deserunt eius a praesentium nam rem
+                      dolorem harum accusantium distinctio reiciendis quisquam.
+                    </h2>
+                  </div>
+                </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="css/imgs/project_2.jpeg"
-                  class="d-block w-100"
-                  alt="Website of Veruda Sport on the screen"
-                />
+                <div class="row row-gap-5 sliderResponsive">
+                  <div class="col-lg-6 col-md-12 col-12">
+                    <img
+                      src="css/imgs/vs-project.jpeg"
+                      class="d-block w-100 h-100 slider_img"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-md-6">
+                    <h2 class="secondaryHeading mb-5 text-center">
+                      about project
+                    </h2>
+                    <h2
+                      class="mainText_color text-lg-start text-md-center text-center"
+                    >
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      In maiores repellat, itaque modi ea magnam voluptatem
+                      natus dignissimos iste sequi voluptates quam laboriosam.
+                      Ullam magni odio repellat dolore. Quia, iure?
+                    </h2>
+                  </div>
+                </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="css/imgs/project_3.jpeg"
-                  class="d-block w-100"
-                  alt="Portofolio of Rayan on the screen"
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="css/imgs/project_4.jpeg"
-                  class="d-block w-100"
-                  alt="Omny food project on teh screen"
-                />
+                <div class="row row-gap-5 sliderResponsive">
+                  <div class="col-lg-6 col-md-12 col-12">
+                    <img
+                      src="css/imgs/rayan_portovolio.jpeg"
+                      class="d-block w-100 h-100 slider_img"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-lg-6 col-md-12 col-12">
+                    <h2 class="secondaryHeading mb-5 text-center">
+                      about project
+                    </h2>
+                    <h2
+                      class="mainText_color text-lg-start text-md-center text-center"
+                    >
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Cupiditate, est. Fuga aspernatur suscipit nam. Quaerat
+                      accusantium nihil maxime mollitia dolor fugit eveniet
+                      explicabo, adipisci harum rerum aspernatur inventore
+                      officiis velit.
+                    </h2>
+                  </div>
+                </div>
               </div>
             </div>
             <button
               class="carousel-control-prev"
               type="button"
-              data-bs-target="#carouselExample"
+              data-bs-target="#carouselExampleFade"
               data-bs-slide="prev"
             >
               <span
@@ -212,7 +263,7 @@
             <button
               class="carousel-control-next"
               type="button"
-              data-bs-target="#carouselExample"
+              data-bs-target="#carouselExampleFade"
               data-bs-slide="next"
             >
               <span
@@ -501,7 +552,7 @@
             <div class="col-lg-4 col-md-12 col-12">
               <div class="pricingCard mainBg_color p-5">
                 <h2
-                  id="medium"
+                  id="meidum"
                   class="secondaryHeading text-center mb-5 text-uppercase"
                 >
                   Medium
@@ -519,7 +570,7 @@
 
                   <li class="d-flex gap-3 align-items-center">
                     <i class="fa-solid fa-check pricingIcon"></i>
-                    <h3 class="mainText_color">Castom web site</h3>
+                    <h3 class="mainText_color">Custom web site</h3>
                   </li>
 
                   <li class="d-flex gap-3 align-items-center">
@@ -561,7 +612,7 @@
 
                   <li class="d-flex gap-3 align-items-center">
                     <i class="fa-solid fa-check pricingIcon"></i>
-                    <h3 class="mainText_color">Castom web site</h3>
+                    <h3 class="mainText_color">Custom web site</h3>
                   </li>
 
                   <li class="d-flex gap-3 align-items-center">
