--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -34,9 +34,9 @@
     <!-- header -->
     <header class="header">
       <nav class="navbar navbar-expand-lg bg-dark p-3">
-        <div class="container d-flex justify-content-between">
+        <div class="container d-flex flex-row w-100 justify-content-between">
           <!-- <div class="rightSide"> -->
-          <div class="col-md-6">
+          <div class="col-lg-6 col-12 d-flex justify-content-between">
             <a class="navbar-brand mainLogo" href="#"
               >Frontend <span>developer</span></a
             >
@@ -55,7 +55,7 @@
           <!-- </div> -->
 
           <!-- <div class="rightSide2"> -->
-          <div class="col-md-6">
+          <div class="col-lg-6 col-12 text-center">
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
@@ -84,15 +84,15 @@
                   >
                     Order
                   </a>
-                  <ul class="dropdown-menu bg-dark">
+                  <ul class="dropdown-menu bg-dark text-center">
                     <li>
                       <a class="dropdown-item mainNav_list" href="#baisic"
-                        >Baisic</a
+                        >Basic</a
                       >
                     </li>
                     <li>
                       <a class="dropdown-item mainNav_list" href="#meidum"
-                        >Medium</a
+                        >Standard</a
                       >
                     </li>
                     <li>
@@ -555,7 +555,7 @@
                   id="meidum"
                   class="secondaryHeading text-center mb-5 text-uppercase"
                 >
-                  Medium
+                  Standard
                 </h2>
 
                 <h2 class="text-center text-warning mb-5">
