add a scroll btn from bottom to top of site

--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -33,7 +33,10 @@
   <body>
     <!-- header -->
     <header class="header">
-      <nav class="navbar navbar-expand-lg bg-dark p-3">
+      <nav
+        class="navbar navbar-expand-lg bg-dark p-3 mainNavigaito"
+        id="mainNavigaito"
+      >
         <div class="container d-flex flex-row w-100 justify-content-between">
           <!-- <div class="rightSide"> -->
           <div class="col-lg-6 col-12 d-flex justify-content-between">
@@ -111,7 +114,7 @@
     </header>
     <!-- header -->
 
-    <main>
+    <main class="mainContent">
       <!-- hero section -->
       <section class="heroSection d-grid align-items-center">
         <div class="container">
@@ -646,6 +649,12 @@
         </div>
       </section>
       <!-- pricing section -->
+
+      <div class="scrollButton">
+        <a href="#mainNavigaito">
+          <i class="fa-solid fa-chevron-up scrollBtn"></i>
+        </a>
+      </div>
     </main>
 
     <!-- footer -->
