--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -695,8 +695,12 @@
               <i class="fa-brands fa-github mediaIconFooter"></i>
             </a>
 
-            <i class="fa-brands fa-square-whatsapp mediaIconFooter"></i>
-            <i class="fa-solid fa-envelope mediaIconFooter"></i>
+            <a href="https://wa.me/+385976505343" target="_blank">
+              <i class="fa-brands fa-square-whatsapp mediaIconFooter"></i>
+            </a>
+            <a href="mailto:momcilo.pos@gmail.com">
+              <i class="fa-solid fa-envelope mediaIconFooter"></i>
+            </a>
           </div>
         </div>
       </div>
