fixing contact icons

--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -33,10 +33,7 @@
   <body>
     <!-- header -->
     <header class="header">
-      <nav
-        class="navbar navbar-expand-lg bg-dark p-3 mainNavigaito"
-        id="mainNavigaito"
-      >
+      <nav class="navbar navbar-expand-lg bg-dark p-3" id="mainNavigaito">
         <div class="container d-flex flex-row w-100 justify-content-between">
           <!-- <div class="rightSide"> -->
           <div class="col-lg-6 col-12 d-flex justify-content-between">
@@ -326,12 +323,16 @@
               <div
                 class="col-4 col-md-2 d-flex justify-content-center align-items-center"
               >
-                <i class="fa-brands fa-square-whatsapp mediaIcon"></i>
+                <a href="https://wa.me/+385976505343" target="_blank">
+                  <i class="fa-brands fa-square-whatsapp mediaIcon"></i>
+                </a>
               </div>
               <div
                 class="col-4 col-md-2 d-flex justify-content-center align-items-center"
               >
-                <i class="fa-solid fa-envelope mediaIcon"></i>
+                <a href="mailto:momcilo.pos#gmail.com">
+                  <i class="fa-solid fa-envelope mediaIcon"></i>
+                </a>
               </div>
             </div>
           </div>
