ficing sections and responsive

--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -121,7 +121,7 @@
               <h2
                 class="developerDescrption mainText_color text-center text-md-end p-md-5 p-5"
               >
-                my name is
+                My name is
                 <span class="secondaryText_color">Momcilo Nikolic</span>. I
                 offer a service as a
                 <span class="secondaryText_color">frontend developer</span>, and
@@ -190,10 +190,13 @@
                     <h2
                       class="mainText_color text-lg-start text-md-center text-center"
                     >
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                      Ab, excepturi. Fugit reprehenderit ad doloremque corrupti.
-                      Odit esse animi, deserunt eius a praesentium nam rem
-                      dolorem harum accusantium distinctio reiciendis quisquam.
+                      Discover the freshest and highest quality produce from our
+                      online fruit and vegetable shop. Our selection is sourced
+                      from local farms and orchards, and includes a variety of
+                      seasonal fruits and vegetables, as well as other products
+                      like fresh herbs and spices, honey and jams. Shop with us
+                      and enjoy fast and reliable delivery straight to your
+                      door.
                     </h2>
                   </div>
                 </div>
@@ -214,10 +217,13 @@
                     <h2
                       class="mainText_color text-lg-start text-md-center text-center"
                     >
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      In maiores repellat, itaque modi ea magnam voluptatem
-                      natus dignissimos iste sequi voluptates quam laboriosam.
-                      Ullam magni odio repellat dolore. Quia, iure?
+                      Welcome to the Veruda Sport blog, your go-to source for
+                      sports news, tips, and inspiration. Our blog covers a
+                      variety of topics related to sports and exercise,
+                      including training techniques, nutrition advice, and
+                      profiles of our members and coaches. Stay up-to-date with
+                      the latest happenings at our sports association and get
+                      inspired to lead an active and healthy lifestyle
                     </h2>
                   </div>
                 </div>
@@ -238,11 +244,7 @@
                     <h2
                       class="mainText_color text-lg-start text-md-center text-center"
                     >
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                      Cupiditate, est. Fuga aspernatur suscipit nam. Quaerat
-                      accusantium nihil maxime mollitia dolor fugit eveniet
-                      explicabo, adipisci harum rerum aspernatur inventore
-                      officiis velit.
+                      Personal portofolio
                     </h2>
                   </div>
                 </div>
@@ -274,68 +276,6 @@
             </button>
           </div>
           <!-- slider -->
-
-          <span
-            class="secondaryHeading d-flex justify-content-center align-items-center mb-5 mediaSpan"
-          >
-            If need website you can contact me.
-          </span>
-
-          <div class="socialmeida container">
-            <div class="row row-gap-5">
-              <div
-                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
-              >
-                <a
-                  href="https://www.facebook.com/momcilo.nikolic.796"
-                  target="_blank"
-                >
-                  <i class="fa-brands fa-facebook mediaIcon"></i>
-                </a>
-              </div>
-              <div
-                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
-              >
-                <a
-                  href="https://www.instagram.com/moco.nikolic/?hl=hr"
-                  target="_blank"
-                >
-                  <i class="fa-brands fa-square-instagram mediaIcon"></i>
-                </a>
-              </div>
-              <div
-                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
-              >
-                <a
-                  href="https://www.linkedin.com/in/mom%C4%8Dilo-nikoli%C4%87-7828b4244/?originalSubdomain=hr"
-                  target="_blank"
-                >
-                  <i class="fa-brands fa-linkedin mediaIcon"></i>
-                </a>
-              </div>
-              <div
-                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
-              >
-                <a href="https://github.com/Moco23" target="_blank">
-                  <i class="fa-brands fa-github mediaIcon"></i>
-                </a>
-              </div>
-              <div
-                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
-              >
-                <a href="https://wa.me/+385976505343" target="_blank">
-                  <i class="fa-brands fa-square-whatsapp mediaIcon"></i>
-                </a>
-              </div>
-              <div
-                class="col-4 col-md-2 d-flex justify-content-center align-items-center"
-              >
-                <a href="mailto:momcilo.pos#gmail.com">
-                  <i class="fa-solid fa-envelope mediaIcon"></i>
-                </a>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
       <!-- my projects section -->
@@ -344,7 +284,7 @@
       <section class="chouseMeSection">
         <div class="container-fluid mainBg_color p-5">
           <h2 class="secondaryHeading text-center mb-5">
-            Why you should chouse me?
+            Why you should choose me?
           </h2>
           <div class="row">
             <div
@@ -407,8 +347,10 @@
       <!-- technologi section -->
       <section class="technologiSection">
         <div class="container">
-          <h2 class="secondaryHeading text-center text-uppercase mb-5">
-            technology
+          <h2
+            class="secondaryHeading text-center text-uppercase aboutTech_heading"
+          >
+            About technology
           </h2>
           <div class="row mb-5">
             <div
@@ -517,7 +459,7 @@
       <!-- pricing section -->
       <section class="pricingSection">
         <div class="container p-5">
-          <h2 class="secondaryHeading text-center mb-5">Pricing</h2>
+          <h2 class="secondaryHeading text-center priingHeading">Pricing</h2>
           <div class="row justify-content-between pricingCards_row">
             <!-- card 1 -->
             <div class="col-lg-4 col-md-12 col-12">
