--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -55,7 +55,7 @@
           <!-- </div> -->
 
           <!-- <div class="rightSide2"> -->
-          <div class="col-lg-6 col-12 text-center">
+          <div class="col-lg-6 col-12 text-center toogle_nav_transition">
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav gap-3">
                 <li class="nav-item">
@@ -213,7 +213,7 @@
                       about the project
                     </h2>
                     <h2
-                      class="mainText_color text-lg-start text-md-center text-center"
+                      class="mainText_color text-lg-start text-md-center text-center aboutTheProjects_description"
                     >
                       Discover the freshest and highest quality produce from our
                       online fruit and vegetable shop. Our selection is sourced
@@ -223,6 +223,16 @@
                       and enjoy fast and reliable delivery straight to your
                       door.
                     </h2>
+                    <div
+                      class="d-flex justify-content-center align-items-center"
+                    >
+                      <a
+                        href="http://www.pto-buraverda.com/"
+                        target="_blank"
+                        class="visitWebsite_btn"
+                        >Visit the website</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -230,8 +240,8 @@
                 <div class="row row-gap-5 sliderResponsive">
                   <div class="col-lg-6 col-md-12 col-12">
                     <img
-                      src="css/imgs/vs-project.jpeg"
-                      class="d-block w-100 h-100 slider_img"
+                      src="css/imgs/vs_web.jpeg"
+                      class="d-block img-fluid slider_img"
                       alt="..."
                     />
                   </div>
@@ -240,7 +250,7 @@
                       about the project
                     </h2>
                     <h2
-                      class="mainText_color text-lg-start text-md-center text-center"
+                      class="mainText_color text-lg-start text-md-center text-center aboutTheProjects_description"
                     >
                       Welcome to the Veruda Sport blog, your go-to source for
                       sports news, tips, and inspiration. Our blog covers a
@@ -250,6 +260,16 @@
                       the latest happenings at our sports association and get
                       inspired to lead an active and healthy lifestyle
                     </h2>
+                    <div
+                      class="d-flex justify-content-center align-items-center"
+                    >
+                      <a
+                        href="http://veruda-sport.hr//"
+                        target="_blank"
+                        class="visitWebsite_btn"
+                        >Visit the website</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -267,10 +287,17 @@
                       about the project
                     </h2>
                     <h2
-                      class="mainText_color text-lg-start text-md-center text-center"
+                      class="mainText_color text-lg-start text-md-center text-center aboutTheProjects_description"
                     >
                       Personal portofolio
                     </h2>
+                    <div
+                      class="d-flex justify-content-center align-items-center"
+                    >
+                      <a href="#" target="_blank" class="visitWebsite_btn"
+                        >Visit the website</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -601,7 +628,7 @@
 
                   <li class="d-flex gap-3 align-items-center">
                     <i class="fa-solid fa-check pricingIcon"></i>
-                    <h3 class="mainText_color">Set on hosting and domen</h3>
+                    <h3 class="mainText_color">Set on hosting and domain</h3>
                   </li>
 
                   <li class="d-flex gap-3 align-items-center">
