working on sections

--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="description"
+      content="I am a frontend developer, I specialize in creating modern, functional, and user-friendly websites with responsive design and great UX/UI. Whether you need a website for your personal portfolio, small or medium-sized business, or a large corporation, I can help bring your ideas to life. Contact me today to discuss your project and create a website that meets all your needs."
+    />
+    <meta
+      name="keywords"
+      content="Frontend, Developer, HTML, CSS, JavaScript, Responsive, Web, Designe, ux, ui, web, development, mobile, aplicaiton, personal, portofolio, company, Accessibility, SEO, optimizaiton "
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
