--- a/my-new-portofolio/index.html
+++ b/my-new-portofolio/index.html
@@ -12,15 +12,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- bs css -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <!-- bs css -->
+    <title>Momcilo Nikolic Frotend Developer</title>
 
     <!-- google fonts -->
     <!-- roboto -->
@@ -33,15 +25,40 @@
     <!-- roboto -->
     <!-- google fonts -->
 
+    <!-- bs css -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <!-- bs css -->
+
+    <!-- jquery css -->
+    <link rel="stylesheet" href="css/jquery-ui.min.css" />
+    <!-- jquery css -->
+
     <!-- my css -->
     <link rel="stylesheet" href="css/general.css" />
-    <title>Momcilo Nikolic Frotend Developer</title>
     <!-- my css -->
+
+    <!-- jquery -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.0.min.js"
+      integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="jquery-ui.min.js"></script>
+    <!-- jquery -->
   </head>
   <body>
     <!-- header -->
     <header class="header">
-      <nav class="navbar navbar-expand-lg bg-dark p-3" id="mainNavigaito">
+      <nav
+        class="navbar navbar-expand-lg bg-dark p-3 mainNav"
+        id="mainNavigaito"
+      >
         <div class="container d-flex flex-row w-100 justify-content-between">
           <!-- <div class="rightSide"> -->
           <div class="col-lg-6 col-12 d-flex justify-content-between">
@@ -729,5 +746,9 @@
       crossorigin="anonymous"
     ></script>
     <!-- font 8 icons script -->
+
+    <!-- my js -->
+    <script src="general_script.js"></script>
+    <!-- my js -->
   </body>
 </html>
